# tl-tools

./: .gitignore  Cargo.toml  env.d.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
rust/basim/: Cargo.toml
rust/basim/src/: collection.rs  comp.rs  effect.rs  lib.rs  master_data.rs  student.rs  types.rs  utils.rs
rust/basim/src/effect/: skill_effect.rs
src/: simulator.test.ts  store.ts  theme.ts  utils.test.ts  utils.ts
src/app/: layout.tsx  page.tsx
src/components/: BasimProvider.tsx  Checkbox.tsx  CollectionEditor.tsx  CompEditor.tsx  EquipmentSelect.tsx  Input.tsx  Modal.tsx  NumberInput.tsx  NumberInputAdornment.tsx  SchoolIcon.tsx  Select.tsx  StarsSelect.tsx  StudentArea.tsx  StudentDetails.tsx  StudentEditor.tsx  StudentList.tsx  TimeInput.tsx  TimelineEditor.tsx  withIconButton.tsx
src/components/IconButtons/: index.ts  withIconButton.tsx
src/data/: enemies.d.json.ts  enemies.json  equipment.d.json.ts  equipment.json  equipments.d.json.ts  equipments.json  students.d.json.ts  students.json
src/hooks/: index.ts  useBasim.ts  useLongPress.ts  useModal.tsx
src/simulator/: index.ts  student.ts
