[package]
name = "basim"
version = "0.1.0"
authors = ["Madono Haru <madonoharu@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify = { version = "0.4.5", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
